k8s/istio/lab01-weight-based-routing/deployment-v2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: caj-fare-v2
  labels:
    app: caj-fare
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caj-fare
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: caj-fare
        version: v2
    spec:
      containers:
        - name: caj-fare
          image: 'docker.io/d0ck3rj3ff/caj-fare:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
