k8s/istio/lab01-weight-based-routing/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: caj-fare
spec:
  host: caj-fare
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
