k8s/istio/lab01-weight-based-routing/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-fare
spec:
  hosts:
    - caj-fare
  http:
  - route:
    - destination:
        host: caj-fare
        subset: v1
      weight: 50
    - destination:
        host: caj-fare
        subset: v2
      weight: 50
